--- a/WoodworksArchives/WoodworksArchives/Base.lproj/Main.storyboard
+++ b/WoodworksArchives/WoodworksArchives/Base.lproj/Main.storyboard
@@ -46,11 +46,11 @@
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="DATE" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8Em-Mt-qZS">
-                                            <rect key="frame" x="324" y="40" width="70" height="21"/>
+                                            <rect key="frame" x="324" y="40" width="70" height="14.5"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="70" id="xRc-cP-sSS"/>
                                             </constraints>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
@@ -78,8 +78,8 @@
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
+                                    <outlet property="archBuiltProductLabel" destination="0Ga-xA-FlB" id="6ct-Mu-OVZ"/>
                                     <outlet property="archClientNameLabel" destination="YWm-xQ-x8g" id="wX6-2J-0zB"/>
-                                    <outlet property="archColorsLabel" destination="0Ga-xA-FlB" id="6ct-Mu-OVZ"/>
                                     <outlet property="archInstalledDateLabel" destination="8Em-Mt-qZS" id="peO-1s-ogk"/>
                                     <outlet property="archWoodSpeciesLabel" destination="Bdc-Rz-8Q6" id="tW1-BQ-WNf"/>
                                 </connections>
@@ -114,7 +114,7 @@
                             </items>
                         </navigationBar>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="currentJob" rowHeight="115" id="dNu-2p-LWK">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="currentJob" rowHeight="115" id="dNu-2p-LWK" customClass="CurrentJobCell" customModule="WoodworksArchives" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="72" width="414" height="115"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="dNu-2p-LWK" id="L9g-B5-T22">
@@ -148,8 +148,11 @@
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="VO6-RB-qap">
+                                        <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="VO6-RB-qap">
                                             <rect key="frame" x="322" y="40" width="74" height="31"/>
+                                            <connections>
+                                                <action selector="currentInstallSwitchDate:" destination="dNu-2p-LWK" eventType="valueChanged" id="vf8-Oa-HCO"/>
+                                            </connections>
                                         </switch>
                                     </subviews>
                                     <constraints>
@@ -169,6 +172,12 @@
                                         <constraint firstItem="7pB-GE-PBU" firstAttribute="leading" secondItem="L9g-B5-T22" secondAttribute="leadingMargin" id="sLE-Ww-sKi"/>
                                     </constraints>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="currentBuiltProductLabel" destination="wxs-ev-dCG" id="qMW-bw-NCZ"/>
+                                    <outlet property="currentClientName" destination="7pB-GE-PBU" id="hMC-i2-Cf1"/>
+                                    <outlet property="currentInstalledSwitch" destination="VO6-RB-qap" id="pTQ-bI-P70"/>
+                                    <outlet property="currentWoodSpecies" destination="GWH-MG-iZi" id="sRe-c0-EUU"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
