--- a/WoodworksArchives/WoodworksArchives/Base.lproj/Main.storyboard
+++ b/WoodworksArchives/WoodworksArchives/Base.lproj/Main.storyboard
@@ -25,8 +25,8 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="Client Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YWm-xQ-x8g">
-                                            <rect key="frame" x="20" y="11" width="284" height="27"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                            <rect key="frame" x="20" y="11" width="284" height="21.5"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
@@ -39,9 +39,9 @@
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Color / Number of Colors" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0Ga-xA-FlB">
-                                            <rect key="frame" x="50" y="46" width="254" height="24"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Built Product Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0Ga-xA-FlB">
+                                            <rect key="frame" x="50" y="40.5" width="254" height="17"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
@@ -55,8 +55,8 @@
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="wood species" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bdc-Rz-8Q6">
-                                            <rect key="frame" x="50" y="78" width="254" height="24"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                            <rect key="frame" x="50" y="65.5" width="254" height="17"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
@@ -82,6 +82,7 @@
                                     <outlet property="archClientNameLabel" destination="YWm-xQ-x8g" id="wX6-2J-0zB"/>
                                     <outlet property="archInstalledDateLabel" destination="8Em-Mt-qZS" id="peO-1s-ogk"/>
                                     <outlet property="archWoodSpeciesLabel" destination="Bdc-Rz-8Q6" id="tW1-BQ-WNf"/>
+                                    <segue destination="BYZ-38-t0r" kind="presentation" identifier="ArchToDetail" id="WWi-PN-I7l"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -109,7 +110,11 @@
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                             <items>
                                 <navigationItem title="Current Jobs" id="5qj-Bq-29S">
-                                    <barButtonItem key="rightBarButtonItem" systemItem="add" id="Lej-Ug-YAh"/>
+                                    <barButtonItem key="rightBarButtonItem" systemItem="add" id="Lej-Ug-YAh">
+                                        <connections>
+                                            <segue destination="BYZ-38-t0r" kind="presentation" identifier="NewToDetail" id="JSe-83-oTn"/>
+                                        </connections>
+                                    </barButtonItem>
                                 </navigationItem>
                             </items>
                         </navigationBar>
@@ -122,20 +127,20 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Client Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7pB-GE-PBU">
-                                            <rect key="frame" x="20" y="11" width="282" height="26.5"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                            <rect key="frame" x="20" y="11" width="282" height="21.5"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Color / Number of Colors" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wxs-ev-dCG">
-                                            <rect key="frame" x="50" y="45.5" width="252" height="24"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                            <rect key="frame" x="50" y="40.5" width="252" height="17"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="wood species" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GWH-MG-iZi">
-                                            <rect key="frame" x="50" y="79" width="252" height="24"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                            <rect key="frame" x="50" y="67" width="252" height="17"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
@@ -177,6 +182,7 @@
                                     <outlet property="currentClientName" destination="7pB-GE-PBU" id="hMC-i2-Cf1"/>
                                     <outlet property="currentInstalledSwitch" destination="VO6-RB-qap" id="pTQ-bI-P70"/>
                                     <outlet property="currentWoodSpecies" destination="GWH-MG-iZi" id="sRe-c0-EUU"/>
+                                    <segue destination="BYZ-38-t0r" kind="presentation" identifier="CurrentToDetail" id="d8l-3u-pQZ"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -368,11 +374,11 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="JobDetailVC" customModule="WoodworksArchives" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gSi-Xa-HxG">
-                                <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="56"/>
                                 <items>
                                     <navigationItem title="Job Detail" id="E3Q-iG-9gb">
                                         <barButtonItem key="backBarButtonItem" title="Back" id="ohf-CT-z5a"/>
@@ -382,7 +388,7 @@
                                 </items>
                             </navigationBar>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="pYe-iC-cRH" userLabel="ClientNameStackView">
-                                <rect key="frame" x="20" y="98" width="374" height="62.5"/>
+                                <rect key="frame" x="20" y="66" width="374" height="62.5"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Client Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RO2-0l-LpO">
                                         <rect key="frame" x="0.0" y="0.0" width="374" height="20.5"/>
@@ -398,7 +404,7 @@
                                 </subviews>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="1Zd-C9-55z" userLabel="BuiltProductsStackView">
-                                <rect key="frame" x="20" y="190.5" width="374" height="95.5"/>
+                                <rect key="frame" x="20" y="158.5" width="374" height="95.5"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Built Products" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ech-4K-OMD">
                                         <rect key="frame" x="0.0" y="0.0" width="374" height="20.5"/>
@@ -420,7 +426,7 @@
                                 </subviews>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="U1k-XU-cRI" userLabel="WoodSpeciesStackView">
-                                <rect key="frame" x="20" y="316" width="374" height="95.5"/>
+                                <rect key="frame" x="20" y="284" width="374" height="95.5"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Wood Species" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LGz-DC-3fU">
                                         <rect key="frame" x="0.0" y="0.0" width="374" height="20.5"/>
@@ -445,7 +451,7 @@
                                 </constraints>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="n98-hD-ZNB" userLabel="ProductNameAndCodesStackView">
-                                <rect key="frame" x="20" y="441.5" width="374" height="198.5"/>
+                                <rect key="frame" x="20" y="409.5" width="374" height="198.5"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Product Name and Codes" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="O5R-cg-6Su">
                                         <rect key="frame" x="0.0" y="0.0" width="374" height="20.5"/>
@@ -491,7 +497,7 @@
                                 </constraints>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="Sx9-Cj-GLH" userLabel="InstalledStackView">
-                                <rect key="frame" x="20" y="670" width="374" height="51.5"/>
+                                <rect key="frame" x="20" y="638" width="374" height="51.5"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="xcD-tG-THC">
                                         <rect key="frame" x="0.0" y="0.0" width="266" height="51.5"/>
@@ -516,17 +522,17 @@
                                             <constraint firstItem="010-jj-khd" firstAttribute="top" secondItem="xcD-tG-THC" secondAttribute="top" id="pM5-f4-ZcO"/>
                                         </constraints>
                                     </stackView>
-                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="tKK-8P-GTP">
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="tKK-8P-GTP">
                                         <rect key="frame" x="274" y="0.0" width="100" height="51.5"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="DATE" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="s3c-wm-emb">
-                                                <rect key="frame" x="0.0" y="0.0" width="100" height="20.5"/>
+                                                <rect key="frame" x="29.5" y="0.0" width="41" height="20.5"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="V2u-85-UHK">
-                                                <rect key="frame" x="0.0" y="20.5" width="102" height="31"/>
+                                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="V2u-85-UHK">
+                                                <rect key="frame" x="25.5" y="20.5" width="51" height="31"/>
                                                 <connections>
                                                     <action selector="installedSwitchIsOn:" destination="BYZ-38-t0r" eventType="valueChanged" id="3bQ-wd-3Fa"/>
                                                 </connections>
@@ -598,6 +604,9 @@
             <point key="canvasLocation" x="-1135" y="733"/>
         </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="JSe-83-oTn"/>
+    </inferredMetricsTieBreakers>
     <resources>
         <image name="list.bullet.indent" catalog="system" width="128" height="74"/>
         <image name="list.bullet.rectangle" catalog="system" width="128" height="93"/>
