--- a/WoodworksArchives/WoodworksArchives/Base.lproj/Main.storyboard
+++ b/WoodworksArchives/WoodworksArchives/Base.lproj/Main.storyboard
@@ -393,7 +393,7 @@
                                 <rect key="frame" x="0.0" y="88" width="414" height="725"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="mC4-VX-D23">
-                                        <rect key="frame" x="20" y="20" width="374" height="634.5"/>
+                                        <rect key="frame" x="20" y="20" width="374" height="603"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="pYe-iC-cRH" userLabel="ClientNameStackView">
                                                 <rect key="frame" x="0.0" y="0.0" width="374" height="62.5"/>
@@ -509,28 +509,43 @@
                                                 </constraints>
                                             </stackView>
                                             <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="Sx9-Cj-GLH" userLabel="InstalledStackView">
-                                                <rect key="frame" x="0.0" y="572" width="374" height="62.5"/>
+                                                <rect key="frame" x="0.0" y="572" width="374" height="31"/>
                                                 <subviews>
                                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="xcD-tG-THC">
-                                                        <rect key="frame" x="0.0" y="0.0" width="374" height="62.5"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="374" height="31"/>
                                                         <subviews>
-                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Installed?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="010-jj-khd">
-                                                                <rect key="frame" x="0.0" y="0.0" width="374" height="20.5"/>
-                                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
-                                                                <nil key="textColor"/>
-                                                                <nil key="highlightedColor"/>
-                                                            </label>
-                                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Installed Date?" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="jBG-cL-wzI">
-                                                                <rect key="frame" x="0.0" y="28.5" width="374" height="34"/>
-                                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                                <textInputTraits key="textInputTraits"/>
-                                                            </textField>
+                                                            <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ka5-nJ-Vvh">
+                                                                <rect key="frame" x="0.0" y="0.0" width="374" height="31"/>
+                                                                <subviews>
+                                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vLV-b6-oKe">
+                                                                        <rect key="frame" x="0.0" y="0.0" width="325" height="31"/>
+                                                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                                    </view>
+                                                                    <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="bVz-6I-SLO">
+                                                                        <rect key="frame" x="325" y="0.0" width="51" height="31"/>
+                                                                        <connections>
+                                                                            <action selector="installSwitch:" destination="BYZ-38-t0r" eventType="valueChanged" id="I9N-hb-3en"/>
+                                                                        </connections>
+                                                                    </switch>
+                                                                </subviews>
+                                                            </stackView>
+                                                            <stackView hidden="YES" opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="wKF-mP-IEP" userLabel="InstalledDateVStackView">
+                                                                <rect key="frame" x="0.0" y="0.0" width="374" height="8"/>
+                                                                <subviews>
+                                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Installed?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="010-jj-khd">
+                                                                        <rect key="frame" x="0.0" y="0.0" width="374" height="0.0"/>
+                                                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                                                        <nil key="textColor"/>
+                                                                        <nil key="highlightedColor"/>
+                                                                    </label>
+                                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Installed Date?" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="jBG-cL-wzI">
+                                                                        <rect key="frame" x="0.0" y="8" width="374" height="0.0"/>
+                                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                                        <textInputTraits key="textInputTraits"/>
+                                                                    </textField>
+                                                                </subviews>
+                                                            </stackView>
                                                         </subviews>
-                                                        <constraints>
-                                                            <constraint firstItem="010-jj-khd" firstAttribute="leading" secondItem="xcD-tG-THC" secondAttribute="leading" id="0wK-SM-vYd"/>
-                                                            <constraint firstAttribute="trailing" secondItem="010-jj-khd" secondAttribute="trailing" id="fOR-nW-xm9"/>
-                                                            <constraint firstItem="010-jj-khd" firstAttribute="top" secondItem="xcD-tG-THC" secondAttribute="top" id="pM5-f4-ZcO"/>
-                                                        </constraints>
                                                     </stackView>
                                                 </subviews>
                                             </stackView>
@@ -569,6 +584,8 @@
                         <outlet property="clientNameTextField" destination="ieB-D7-9kN" id="Mlr-Hj-wtK"/>
                         <outlet property="gallonsTextField" destination="HEX-ov-Rf4" id="Hly-be-usS"/>
                         <outlet property="installedDateTextField" destination="jBG-cL-wzI" id="7Pp-ES-usw"/>
+                        <outlet property="installedDateVStack" destination="wKF-mP-IEP" id="4Tx-hn-pTE"/>
+                        <outlet property="installedSwitch" destination="bVz-6I-SLO" id="KNw-MB-ktQ"/>
                         <outlet property="productNameAndCodeTextView" destination="eGB-ZK-NHo" id="fq3-NA-3Ry"/>
                         <outlet property="woodSpeciesTextView" destination="c3E-Vu-kEH" id="fjF-BI-Rdj"/>
                     </connections>
